--- a/fieldservice_mobile/views/fsm_order_view.xml
+++ b/fieldservice_mobile/views/fsm_order_view.xml
@@ -10,9 +10,12 @@
                                           ('team_ids', 'in', (team_id, False)),
                                           ('is_display_in_odoo', '=', True)]</attribute>
             </xpath>
+            <field name="duration" position="attributes">
+                <attribute name="widget">float_time</attribute>
+            </field>
             <xpath expr="//notebook/page[@name='execution_page']/group" position="after">
                 <group string="Stages History">
-                    <field name="fsm_stage_history_ids"  nolabel="1">
+                    <field name="fsm_stage_history_ids" nolabel="1">
                         <tree editable="bottom">
                             <field name="start_datetime" required="1"/>
                             <field name="stage_id" required="1"/>
