[IMP] Address Autocomplete on Name and Street
[IMP] Formatting

[IMP] Simplify

--- a/fieldservice_googlemaps_address_autocompletion/views/fsm_location.xml
+++ b/fieldservice_googlemaps_address_autocompletion/views/fsm_location.xml
@@ -7,8 +7,15 @@
         <field name="model">fsm.location</field>
         <field name='inherit_id' ref='fieldservice.fsm_location_form_view'/>
         <field name="arch" type="xml">
-            <field name='street' position='attributes'>
+            <field name='name' position='attributes'>
                 <attribute name='widget'>gplaces_autocomplete</attribute>
+                <attribute name='options'>
+                    {'lat':'partner_latitude','lng':'partner_longitude'}
+                </attribute>
+            </field>
+            <field name="street"
+                   position='attributes'>
+                <attribute name='widget'>gplaces_address_autocomplete</attribute>
                 <attribute name='options'>
                     {'lat':'partner_latitude','lng':'partner_longitude'}
                 </attribute>
