--- a/fieldservice_googlemaps_address_autocompletion/views/res_partner.xml
+++ b/fieldservice_googlemaps_address_autocompletion/views/res_partner.xml
@@ -6,13 +6,19 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet/group//field[@name='street']"
-                   position='attributes'>
+            <field name="name" position='attributes'>
                 <attribute name='widget'>gplaces_autocomplete</attribute>
                 <attribute name='options'>
                     {'lat':'partner_latitude','lng':'partner_longitude'}
                 </attribute>
-            </xpath>
+            </field>
+            <field name="street"
+                   position='attributes'>
+                <attribute name='widget'>gplaces_address_autocomplete</attribute>
+                <attribute name='options'>
+                    {'lat':'partner_latitude','lng':'partner_longitude'}
+                </attribute>
+            </field>
         </field>
     </record>
 
