--- a/fieldservice_tracking/views/fsm_person_view.xml
+++ b/fieldservice_tracking/views/fsm_person_view.xml
@@ -6,13 +6,18 @@
         <field name="arch" type="xml">
             <xpath expr="/form/sheet/notebook" position="inside">
                 <page name="fsm_tracking" string="Field Service Tracking">
-                    <group col="4" string="Location Details">
-                        <field name="track_lat"/>
-                        <field name="track_long"/>
-                        <!-- <field name="track_shape"/> -->
-                        <field name="loc_rad"/>
-                        <field name="loc_time"/>
-                        <field name="rad_uom"/>
+                    <group string="Last Update">
+                        <group>
+                            <field name="worker_allow_tracking"/>
+                            <field name="loc_time"/>
+                            <field name="rad_uom"/>
+                            <!-- <field name="track_shape"/> -->
+                        </group>
+                        <group>
+                            <field name="track_lat"/>
+                            <field name="track_long"/>
+                            <field name="loc_rad"/>
+                        </group>
                     </group>
                     <group col="4" groups="fieldservice_tracking.fsm_tracking_dispatcher">
                         <field name="match_rad"/>
