--- a/src/custom-addons/osi_check_layout/report/osi_print_check.xml
+++ b/src/custom-addons/osi_check_layout/report/osi_print_check.xml
@@ -51,6 +51,7 @@
                 <th class="text-left">PO Ref#</th>
                 <th class="text-left">Invoice Number</th>
                 <th class="text-right">Inv. Amount</th>
+                <th class="text-right">Discount</th>
                 <th class="text-right">Payment</th>
             </tr></thead>
             <tbody>
@@ -65,6 +66,7 @@
                         <td class="text-right">
                             <t t-esc="stub_line['amount_total']"/>
                         </td>
+                        <td class="text-right"><t t-esc="stub_line['discount']"/></td>
                         <td class="text-right"><t t-esc="stub_line['amount_paid']"/></td>
                     </tr></t>
                 </t>
@@ -94,6 +96,7 @@
                 <th class="text-left">PO Ref#</th>
                 <th class="text-left">Invoice Number</th>
                 <th class="text-right">Inv. Amount</th>
+                <th class="text-right">Discount</th>
                 <th class="text-right">Payment</th>
             </tr></thead>
             <tbody>
@@ -108,6 +111,7 @@
                         <td class="text-right">
                             <t t-esc="stub_line['amount_total']"/>
                         </td>
+                        <td class="text-right"><t t-esc="stub_line['discount']"/></td>
                         <td class="text-right"><t t-esc="stub_line['amount_paid']"/></td>
                     </tr></t>
                 </t>
