--- a/helpdesk_timesheet_fieldservice/views/helpdesk_ticket.xml
+++ b/helpdesk_timesheet_fieldservice/views/helpdesk_ticket.xml
@@ -9,7 +9,7 @@
         <field name="inherit_id"
                ref="helpdesk_fieldservice.helpdesk_ticket_view_service_request_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//notebook/page/notebook" position="attributes">
+            <xpath expr="//notebook/page/field[@name='description']" position="attributes">
                 <attribute name="placeholder">Description of the ticket...</attribute>
             </xpath>
         </field>
