--- a/helpdesk_fieldservice/views/fsm_location_views.xml
+++ b/helpdesk_fieldservice/views/fsm_location_views.xml
@@ -5,7 +5,6 @@
         <field name="name">Helpdesk Tickets</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">helpdesk.ticket</field>
-        <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('fsm_location_id', '=', active_id)]</field>
         <field name="help" type="html">
@@ -25,7 +24,7 @@
                 <button name="action_view_ticket"
                         type="object"
                         class="oe_stat_button"
-                        icon="fa-pencil-square-o">
+                        icon="fa-edit">
                     <field name="ticket_count"
                            widget="statinfo"
                            string="Tickets"/>
