--- a/helpdesk_fieldservice/views/res_partner.xml
+++ b/helpdesk_fieldservice/views/res_partner.xml
@@ -3,6 +3,7 @@
     <record id="res_partner_form_ticket_context" model="ir.ui.view">
         <field name="name">res.partner.form.ticket.context</field>
         <field name="model">res.partner</field>
+        <field name="groups_id" eval="[(4, ref('helpdesk.group_helpdesk_user'))]"/>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <button name="action_open_helpdesk_ticket" position="attributes">
