--- a/osi_prod_cost_rollup_to_bom/views/product_views.xml
+++ b/osi_prod_cost_rollup_to_bom/views/product_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-    <!-- Copyright 2019 Open Source Integrators
+    <!-- Copyright 2021 Open Source Integrators
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
         <!-- product product form view -->
@@ -15,4 +15,14 @@
             </field>
         </record>
 
+        <record id="view_std_price_product_template" model="ir.ui.view">
+            <field name="name">view.std.price.product.template</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                    <field name="company_id" position="before">
+                        <field name="std_cost_update_date" readonly="1" />
+            		</field>
+            </field>
+        </record>
 </odoo>
