--- a/fieldservice_mobile/views/fsm_order_view.xml
+++ b/fieldservice_mobile/views/fsm_order_view.xml
@@ -18,11 +18,7 @@
                 position="after"
             >
                 <group string="Stages History">
-                    <field
-                        name="fsm_stage_history_ids"
-                        nolabel="1"
-                        readonly="1"
-                    >
+                    <field name="fsm_stage_history_ids" nolabel="1" readonly="1">
                         <tree editable="bottom">
                             <field name="start_datetime" required="1" />
                             <field name="stage_id" required="1" />
