--- a/fieldservice_mobile/views/res_config_settings.xml
+++ b/fieldservice_mobile/views/res_config_settings.xml
@@ -4,10 +4,7 @@
         <field name="name">res.config.settings.view.form.fsm.mobile</field>
         <field name="model">res.config.settings</field>
         <field name="priority" eval="40" />
-        <field
-            name="inherit_id"
-            ref="fieldservice.res_config_settings_view_form"
-        />
+        <field name="inherit_id" ref="fieldservice.res_config_settings_view_form" />
         <field name="arch" type="xml">
             <div id="orders" position="inside">
                 <div class="col-xs-12 col-md-6 o_setting_box">
