[14.0][FIX] Fix Travis

--- a/osi_bank_reconciled_report/views/account_journal_dashboard_view.xml
+++ b/osi_bank_reconciled_report/views/account_journal_dashboard_view.xml
@@ -1,12 +1,24 @@
 <odoo>
-    <record model="ir.ui.view" id="account_reports_journal_dashboard_kanban_view_reconciled">
+    <record
+        model="ir.ui.view"
+        id="account_reports_journal_dashboard_kanban_view_reconciled"
+    >
         <field name="name">account.journal.dashboard.kanban.reports</field>
         <field name="model">account.journal</field>
-        <field name="inherit_id" ref="account_reports.account_reports_journal_dashboard_kanban_view" />
+        <field
+            name="inherit_id"
+            ref="account_reports.account_reports_journal_dashboard_kanban_view"
+        />
         <field name="arch" type="xml">
-            <xpath expr="//div[hasclass('o_kanban_manage_reconciliation')]" position="inside">
+            <xpath
+                expr="//div[hasclass('o_kanban_manage_reconciliation')]"
+                position="inside"
+            >
                 <div groups="account.group_account_manager">
-                    <a type="action" name="%(action_account_report_bank_reconciled_with_journal)d">Reconciled Report</a>
+                    <a
+                        type="action"
+                        name="%(action_account_report_bank_reconciled_with_journal)d"
+                    >Reconciled Report</a>
                 </div>
             </xpath>
         </field>
