--- a/osi_analytic_sales_simple/views/sale_order_view.xml
+++ b/osi_analytic_sales_simple/views/sale_order_view.xml
@@ -8,11 +8,13 @@
     <record id="view_order_form" model="ir.ui.view">
         <field name="name">sale.order.form</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='order_line']/tree//field[@name='price_unit']"
-                   position="before">
-                <field name="analytic_account_id"/>
+            <xpath
+                expr="//field[@name='order_line']/tree//field[@name='price_unit']"
+                position="before"
+            >
+                <field name="analytic_account_id" />
             </xpath>
         </field>
     </record>
