--- a/osi_analytic_segments/views/account_move_view.xml
+++ b/osi_analytic_segments/views/account_move_view.xml
@@ -7,14 +7,20 @@
     <record id="account_move_form_segments" model="ir.ui.view">
         <field name="name">account.move.form.segments</field>
         <field name="model">account.move</field>
-        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='line_ids']/tree/field[@name='analytic_account_id']"
-                   position="after">
-                <field name="analytic_segment_one_id"
-                       groups="analytic.group_analytic_accounting"/>
-                <field name="analytic_segment_two_id"
-                       groups="analytic.group_analytic_accounting"/>
+            <xpath
+                expr="//field[@name='line_ids']/tree/field[@name='analytic_account_id']"
+                position="after"
+            >
+                <field
+                    name="analytic_segment_one_id"
+                    groups="analytic.group_analytic_accounting"
+                />
+                <field
+                    name="analytic_segment_two_id"
+                    groups="analytic.group_analytic_accounting"
+                />
             </xpath>
         </field>
     </record>
@@ -23,14 +29,17 @@
     <record id="account_move_line_tree_segments" model="ir.ui.view">
         <field name="name">account.move.line.tree.segments</field>
         <field name="model">account.move.line</field>
-        <field name="inherit_id" ref="account.view_move_line_tree"/>
+        <field name="inherit_id" ref="account.view_move_line_tree" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']"
-                   position="after">
-                <field name="analytic_segment_one_id"
-                       groups="analytic.group_analytic_accounting"/>
-                <field name="analytic_segment_two_id"
-                       groups="analytic.group_analytic_accounting"/>
+            <xpath expr="//field[@name='analytic_account_id']" position="after">
+                <field
+                    name="analytic_segment_one_id"
+                    groups="analytic.group_analytic_accounting"
+                />
+                <field
+                    name="analytic_segment_two_id"
+                    groups="analytic.group_analytic_accounting"
+                />
             </xpath>
         </field>
     </record>
