--- a/osi_analytic_segments/views/account_move_view.xml
+++ b/osi_analytic_segments/views/account_move_view.xml
@@ -22,6 +22,19 @@
                     groups="analytic.group_analytic_accounting"
                 />
             </xpath>
+             <xpath
+                expr="//field[@name='invoice_line_ids']/tree/field[@name='analytic_account_id']"
+                position="after"
+            >
+                <field
+                    name="analytic_segment_one_id"
+                    groups="analytic.group_analytic_accounting"
+                />
+                <field
+                    name="analytic_segment_two_id"
+                    groups="analytic.group_analytic_accounting"
+                />
+            </xpath>
         </field>
     </record>
 
