[14.0][MIG] osi_analytic_segments_sales

--- a/osi_analytic_segments_sales/views/sale_order_view.xml
+++ b/osi_analytic_segments_sales/views/sale_order_view.xml
@@ -10,11 +10,10 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']" position="after">
+            <xpath expr="//group[@name='sale_info']" position="inside">
                 <field name="analytic_segment_one_id" />
                 <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
-
 </odoo>
