--- a/osi_analytic_segments_stock/views/stock_move.xml
+++ b/osi_analytic_segments_stock/views/stock_move.xml
@@ -3,11 +3,11 @@
     <record id="view_move_picking_form" model="ir.ui.view">
         <field name="name">stock.move.picking.form</field>
         <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_picking_form"/>
+        <field name="inherit_id" ref="stock.view_move_picking_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='location_dest_id']" position="after">
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
@@ -15,11 +15,11 @@
     <record id="view_move_picking_tree" model="ir.ui.view">
         <field name="name">stock.move.picking.tree</field>
         <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_picking_tree"/>
+        <field name="inherit_id" ref="stock.view_move_picking_tree" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_uom']" position="after">
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
@@ -27,11 +27,11 @@
     <record id="view_move_tree" model="ir.ui.view">
         <field name="name">stock.move.tree</field>
         <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_tree"/>
+        <field name="inherit_id" ref="stock.view_move_tree" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='location_dest_id']" position="after">
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
@@ -39,11 +39,11 @@
     <record id="view_move_form" model="ir.ui.view">
         <field name="name">stock.move.form</field>
         <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_form"/>
+        <field name="inherit_id" ref="stock.view_move_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='location_dest_id']" position="after">
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
@@ -51,19 +51,28 @@
     <record id="view_move_search_analytic" model="ir.ui.view">
         <field name="name">stock.move.search</field>
         <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_search"/>
+        <field name="inherit_id" ref="stock.view_move_search" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position="after">
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
-            <xpath expr="//filter[@name='groupby_dest_location_id']" position="after">
-                <filter string="Segment One" name="segment1"
-                        context="{'group_by': 'analytic_segment_one_id'}"
-                        groups="analytic.group_analytic_accounting"/>
-                <filter string="Segment Two" name="segment2"
-                        context="{'group_by': 'analytic_segment_two_id'}"
-                        groups="analytic.group_analytic_accounting"/>
+            <xpath
+                expr="//filter[@name='groupby_dest_location_id']"
+                position="after"
+            >
+                <filter
+                    string="Segment One"
+                    name="segment1"
+                    context="{'group_by': 'analytic_segment_one_id'}"
+                    groups="analytic.group_analytic_accounting"
+                />
+                <filter
+                    string="Segment Two"
+                    name="segment2"
+                    context="{'group_by': 'analytic_segment_two_id'}"
+                    groups="analytic.group_analytic_accounting"
+                />
             </xpath>
         </field>
     </record>
@@ -71,11 +80,14 @@
     <record id="view_picking_form_analytic" model="ir.ui.view">
         <field name="name">stock.picking.form</field>
         <field name="model">stock.picking</field>
-        <field name="inherit_id" ref="stock.view_picking_form"/>
+        <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="after">
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+            <xpath
+                expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
+                position="after"
+            >
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
