--- a/osi_credit_card_reconciliation/views/account_move_line_view.xml
+++ b/osi_credit_card_reconciliation/views/account_move_line_view.xml
@@ -7,33 +7,38 @@
     <record id="view_account_move_line_cc_rec_statement_id" model="ir.ui.view">
         <field name="name">account.move.line.cc.rec.statement.id</field>
         <field name="model">account.move.line</field>
-        <field name="inherit_id" ref="account.view_account_move_line_filter"/>
+        <field name="inherit_id" ref="account.view_account_move_line_filter" />
         <field name="arch" type="xml">
             <field name="journal_id" position="after">
-                <field name="cc_rec_statement_id"/>
+                <field name="cc_rec_statement_id" />
             </field>
             <field name="partner_id" position="before">
-                <filter icon="terp-document-new" name="unclear_bank_acc_osi"
-                        string="Uncleared Bank Account"
-                        domain="[('cleared_cc_account','=',False)]"
-                        help="Journal Entries not cleared"/>
-                <separator orientation="vertical"/>
+                <filter
+                    icon="terp-document-new"
+                    name="unclear_bank_acc_osi"
+                    string="Uncleared Bank Account"
+                    domain="[('cleared_cc_account','=',False)]"
+                    help="Journal Entries not cleared"
+                />
+                <separator orientation="vertical" />
             </field>
         </field>
     </record>
 
     <!--- Journal Items Form View -->
-    <record id="view_account_move_line_cc_rec_statement_id_form"
-            model="ir.ui.view">
+    <record
+        id="view_account_move_line_cc_rec_statement_id_form"
+        model="ir.ui.view"
+    >
         <field name="name">account.move.line.cc.rec.statement.id.form</field>
         <field name="model">account.move.line</field>
-        <field name="inherit_id" ref="account.view_move_line_form"/>
+        <field name="inherit_id" ref="account.view_move_line_form" />
         <field name="arch" type="xml">
             <field name="statement_id" position="after">
-                <field name="cc_rec_statement_id"/>
+                <field name="cc_rec_statement_id" />
             </field>
             <field name="blocked" position="after">
-                <field name="cleared_cc_account"/>
+                <field name="cleared_cc_account" />
             </field>
         </field>
     </record>
